editor/zed-pluto/grammars/pluto/grammar.js
    source_file: ($) =>
      seq(
        repeat(seq(repeat($._newline), $._top_level_item)),
        repeat($._newline),
      ),

    _newline: (_) => token(/\n/),

    _top_level_item: ($) =>
      choice(
        $.function_definition,
        $.class_definition,
        $.trait_definition,
        $.enum_definition,
        $.error_definition,
        $.app_definition,
        $.import_declaration,
        $.extern_fn_declaration,
        $.extern_rust_declaration,
        $.test_definition,
      ),

    function_definition: ($) =>
      seq(
        optional("pub"),
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        optional(field("return_type", $._type)),
        choice($.block, $._newline),
      ),

    parameter_list: ($) =>
      seq(
        "(",
        optional($._newlines),
        optional(
          seq(
            $.parameter,
            repeat(seq(",", optional($._newlines), $.parameter)),
            optional(","),
            optional($._newlines),
          ),
        ),
        ")",
      ),

    block: ($) =>
      seq("{", repeat($._newline), repeat($._statement_with_newline), "}"),

    _statement_with_newline: ($) =>
      seq($._statement, repeat1($._newline)),

    let_statement: ($) =>
      seq(
        "let",
        optional("mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    return_statement: ($) =>
      seq("return", optional($._expression)),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        field("consequence", $.block),
        optional(
          seq(
            "else",
            field(
              "alternative",
              choice($.if_statement, $.block),
            ),
          ),
        ),
      ),

    while_statement: ($) =>
      seq("while", field("condition", $._expression), $.block),

    for_statement: ($) =>
      seq(
        "for",
        field("variable", $.identifier),
        "in",
        field("iterable", $._expression),
        $.block,
      ),

    match_statement: ($) =>
      seq(
        "match",
        field("subject", $._expression),
        "{",
        repeat($._newline),
        repeat(seq($.match_arm, repeat($._newline))),
        "}",
      ),

    match_arm: ($) =>
      seq(
        field("enum_name", $.identifier),
        ".",
        field("variant", $.identifier),
        optional($.pattern_fields),
        $.block,
      ),

    raise_statement: ($) =>
      seq("raise", $._expression),

    break_statement: (_) => "break",

    assignment_statement: ($) =>
      seq(
        field("target", $._assignable),
        field("operator", choice("=", "+=", "-=", "*=", "/=", "%=")),
        field("value", $._expression),
      ),

    _assignable: ($) =>
      choice(
        $.identifier,
        $.field_expression,
        $.index_expression,
      ),

    expression_statement: ($) => $._expression,

    // ─── Expressions ───────────────────────────────────────────────

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.index_expression,
        $.propagate_expression,
        $.catch_expression,
        $.cast_expression,
        $.spawn_expression,
        $.range_expression,
        $.closure_expression,
        $.struct_literal,
        $.enum_expression,
        $.primary_expression,
      ),

    binary_expression: ($) => {
      const table = [
        [prec.left, 1, "||"],
        [prec.left, 2, "&&"],
        [prec.left, 3, "|"],
        [prec.left, 4, "^"],
        [prec.left, 5, "&"],
        [prec.left, 6, choice("==", "!=")],
        [prec.left, 7, choice("<", ">", "<=", ">=")],
        [prec.left, 8, choice("<<", ">>")],
        [prec.left, 9, choice("+", "-")],
        [prec.left, 10, choice("*", "/", "%")],
      ];
      return choice(
        ...table.map(([fn, p, ops]) =>
          fn(
            p,
            seq(
              field("left", $._expression),
              field("operator", ops),
              optional($._newlines),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    call_expression: ($) =>
      prec(
        13,
        seq(
          field("function", $.identifier),
          $.argument_list,
        ),
      ),

    range_expression: ($) =>
      prec.left(
        0,
        seq(
          field("start", $._expression),
          field("operator", choice("..", "..=")),
          field("end", $._expression),
        ),
      ),

    struct_literal: ($) =>
      prec(
        14,
        seq(
          field("name", $.identifier),
          "{",
          optional($._newlines),
          optional(
            seq(
              $.struct_field_value,
              repeat(seq(",", optional($._newlines), $.struct_field_value)),
              optional(","),
              optional($._newlines),
            ),
          ),
          "}",
        ),
      ),

    struct_field_value: ($) =>
      seq(field("name", $.identifier), ":", field("value", $._expression)),

    argument_list: ($) =>
      seq(
        "(",
        optional($._newlines),
        optional(
          seq(
            $._expression,
            repeat(seq(",", optional($._newlines), $._expression)),
            optional(","),
            optional($._newlines),
          ),
        ),
        ")",
      ),

    primary_expression: ($) =>
      choice(
        $.identifier,
        $.integer,
        $.float,
        $.string,
        $.boolean,
        $.self_,
        $.array_literal,
        $.map_literal,
        $.set_literal,
        $.parenthesized_expression,
      ),

    _type: ($) =>
      choice(
        $.named_type,
        $.array_type,
        $.function_type,
        $.generic_type,
        $.qualified_type,
      ),

    named_type: ($) => $.identifier,

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer: (_) => /[0-9][0-9_]*/,

    string: (_) => seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),

    boolean: (_) => choice("true", "false"),

    _newlines: ($) => repeat1($._newline),
  },
});
