editor/zed-pluto/grammars/pluto/test/corpus/statements.txt
========
Let statement
========

fn main() {
    let x = 42
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        name: (identifier)
        value: (primary_expression (integer))))))

========
Let with type annotation
========

fn main() {
    let x: int = 42
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        name: (identifier)
        type: (named_type (identifier))
        value: (primary_expression (integer))))))

========
Let mut
========

fn main() {
    let mut x = 0
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        name: (identifier)
        value: (primary_expression (integer))))))

========
If else
========

fn main() {
    if x > 0 {
        return 1
    } else {
        return 0
    }
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (if_statement
        condition: (binary_expression
          left: (primary_expression (identifier))
          operator: ">"
          right: (primary_expression (integer)))
        consequence: (block
          (return_statement (primary_expression (integer))))
        alternative: (block
          (return_statement (primary_expression (integer))))))))

========
While loop
========

fn main() {
    while x > 0 {
        x = x - 1
    }
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (while_statement
        condition: (binary_expression
          left: (primary_expression (identifier))
          operator: ">"
          right: (primary_expression (integer)))
        (block
          (assignment_statement
            target: (identifier)
            operator: "="
            value: (binary_expression
              left: (primary_expression (identifier))
              operator: "-"
              right: (primary_expression (integer)))))))))

========
For loop
========

fn main() {
    for i in 0..10 {
        print(i)
    }
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (for_statement
        variable: (identifier)
        iterable: (range_expression
          start: (primary_expression (integer))
          operator: ".."
          end: (primary_expression (integer)))
        (block
          (expression_statement
            (call_expression
              function: (identifier)
              (argument_list (primary_expression (identifier))))))))))

========
Match statement
========

fn main() {
    match c {
        Color.Red {
            print("red")
        }
        Color.Blue {
            print("blue")
        }
    }
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (match_statement
        subject: (primary_expression (identifier))
        (match_arm
          enum_name: (identifier)
          variant: (identifier)
          (block
            (expression_statement
              (call_expression
                function: (identifier)
                (argument_list (primary_expression (string)))))))
        (match_arm
          enum_name: (identifier)
          variant: (identifier)
          (block
            (expression_statement
              (call_expression
                function: (identifier)
                (argument_list (primary_expression (string)))))))))))

========
Raise statement
========

fn main() {
    raise NotFound { message: "gone" }
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (raise_statement
        (struct_literal
          name: (identifier)
          (struct_field_value name: (identifier) value: (primary_expression (string))))))))

========
Break and continue
========

fn main() {
    while true {
        break
    }
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (while_statement
        condition: (primary_expression (boolean))
        (block
          (break_statement))))))

========
Assignment operators
========

fn main() {
    x += 1
    y -= 2
    z *= 3
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (assignment_statement
        target: (identifier)
        operator: "+="
        value: (primary_expression (integer)))
      (assignment_statement
        target: (identifier)
        operator: "-="
        value: (primary_expression (integer)))
      (assignment_statement
        target: (identifier)
        operator: "*="
        value: (primary_expression (integer))))))
